// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> block renders correctly 1`] = `
<StyledComponent
  blacklist={
    Array [
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
      "color",
      "bg",
      "boxShadow",
      "rounded",
      "block",
    ]
  }
  block={true}
  forwardedRef={null}
  variant="default"
>
  Hello world
</StyledComponent>
`;

exports[`<Button /> primary renders correctly 1`] = `
<StyledComponent
  blacklist={
    Array [
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
      "color",
      "bg",
      "boxShadow",
      "rounded",
      "block",
    ]
  }
  forwardedRef={null}
  variant="primary"
>
  Hello world
</StyledComponent>
`;

exports[`<Button /> renders correctly 1`] = `
<StyledComponent
  blacklist={
    Array [
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
      "color",
      "bg",
      "boxShadow",
      "rounded",
      "block",
    ]
  }
  forwardedRef={null}
  variant="default"
>
  Hello world
</StyledComponent>
`;

exports[`<Button /> rounded renders correctly 1`] = `
<StyledComponent
  blacklist={
    Array [
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
      "color",
      "bg",
      "boxShadow",
      "rounded",
      "block",
    ]
  }
  forwardedRef={null}
  rounded={true}
  variant="default"
>
  Hello world
</StyledComponent>
`;
